--- a/docs/man/ModemManager.8
+++ b/docs/man/ModemManager.8
@@ -19,20 +19,6 @@ actual device (Generic AT, vendor-specific AT, QCDM, QMI, MBIM...).
 ModemManager is a DBus-based system daemon and is not meant to be used directly
 from the command line.
 
-.SH HELP OPTIONS
-.TP
-.B \-V, \-\-version
-Print the ModemManager software version and exit.
-.TP
-.B \-h, \-\-help
-Show application options.
-.TP
-.B \-\-help\-all
-Show application and test options.
-.TP
-.B \-\-help\-test
-Show test options.
-
 .SH APPLICATION OPTIONS
 .TP
 .B \-\-no\-auto\-scan
@@ -47,6 +33,14 @@ Runs ModemManager with "DEBUG" log level and without daemonizing. This is useful
 for debugging, as it directs log output to the controlling terminal in addition to
 syslog.
 .TP
+.B \-V, \-\-version
+Print the ModemManager software version and exit.
+.TP
+.B \-h, \-\-help
+Show application options.
+
+.SH LOGGING OPTIONS
+.TP
 .B \-\-log\-level=<level>
 Sets how much information ModemManager sends to the log destination (usually
 syslog's "daemon" facility). By default, only informational, warning, and error
@@ -56,10 +50,10 @@ messages are logged. Given level must be one of "ERR", "WARN", "INFO" or "DEBUG"
 Specify location of the file where ModemManager will dump its log messages,
 instead of syslog.
 .TP
-.B \-\-timestamps
+.B \-\-log\-timestamps
 Include absolute timestamps in the log output.
 .TP
-.B \-\-relative-timestamps
+.B \-\-log\-relative\-timestamps
 Include timestamps, relative to the start time of the daemon, in the log output.
 
 .SH TEST OPTIONS
