man,mmcli: fix documentation for --set-current-bands
Reported by: Matthew Stanger <stangerm2@gmail.com>

--- a/docs/man/mmcli.8
+++ b/docs/man/mmcli.8
@@ -219,7 +219,7 @@ deleted.
 Set allowed modes for a given modem. For possible modes, see the
 beginning of this section.
 .TP
-.B \-\-set\-bands=[BAND1|BAND2|...]
+.B \-\-set\-current\-bands=[BAND1|BAND2|...]
 Set bands to be used for a given modem. These are frequency ranges
 the modem should use. There are quite a number of supported bands and
 listing them all here would be quite extensive. For details, see the
