po: minor updates in fr and it translation files
(cherry picked from commit e75063d80a8b18a28a89116beb78e42fe85c0d56)

--- a/po/it.po
+++ b/po/it.po
@@ -6,17 +6,16 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: ModemManager master\n"
-"Report-Msgid-Bugs-To: https://gitlab.freedesktop.org/mobile-broadband/"
-"ModemManager/issues\n"
-"POT-Creation-Date: 2018-09-11 03:24+0000\n"
+"Report-Msgid-Bugs-To: modemmanager-devel@lists.freedesktop.org\n"
+"POT-Creation-Date: 2018-09-13 09:33+0200\n"
 "PO-Revision-Date: 2018-09-11 11:25+0200\n"
+"Last-Translator: Milo Casagrande <milo@milo.name>\n"
 "Language-Team: Italian <gnome-it-list@gnome.org>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Last-Translator: Milo Casagrande <milo@milo.name>\n"
 "X-Generator: Poedit 2.1.1\n"
 
 #: data/org.freedesktop.ModemManager1.policy.in.in:13
