--- a/po/fr.po
+++ b/po/fr.po
@@ -7,9 +7,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: ModemManager master\n"
-"Report-Msgid-Bugs-To: https://gitlab.freedesktop.org/mobile-broadband/"
-"ModemManager/issues\n"
-"POT-Creation-Date: 2018-08-18 03:24+0000\n"
+"Report-Msgid-Bugs-To: modemmanager-devel@lists.freedesktop.org\n"
+"POT-Creation-Date: 2018-09-13 09:33+0200\n"
 "PO-Revision-Date: 2018-08-18 16:17+0200\n"
 "Last-Translator: Claude Paroz <claude@2xlibre.net>\n"
 "Language-Team: French <gnomefr@traduc.org>\n"
@@ -34,8 +33,8 @@ msgstr "Déverrouiller et contrôler un périphérique mobile à large bande"
 msgid ""
 "System policy prevents unlocking or controlling the mobile broadband device."
 msgstr ""
-"La politique système empêche le verrouillage et le contrôle d’un périphérique "
-"mobile à large bande." 
+"La politique système empêche le verrouillage et le contrôle d’un "
+"périphérique mobile à large bande."
 
 #: data/org.freedesktop.ModemManager1.policy.in.in:31
 msgid "Add, modify, and delete mobile broadband contacts"
@@ -56,8 +55,8 @@ msgstr "Envoyer, enregistrer, modifier et supprimer des messages textuels"
 msgid ""
 "System policy prevents sending or manipulating this device's text messages."
 msgstr ""
-"La politique système empêche l’envoi ou la manipulation des messages textuels "
-"ce cet appareil."
+"La politique système empêche l’envoi ou la manipulation des messages "
+"textuels ce cet appareil."
 
 #: data/org.freedesktop.ModemManager1.policy.in.in:49
 msgid "Accept incoming voice calls or start outgoing voice calls."
@@ -88,8 +87,8 @@ msgid ""
 "System policy prevents querying or utilizing network information and "
 "services."
 msgstr ""
-"La politique système empêche l’interrogation et l’utilisation des informations "
-"et des services du réseau."
+"La politique système empêche l’interrogation et l’utilisation des "
+"informations et des services du réseau."
 
 #: data/org.freedesktop.ModemManager1.policy.in.in:76
 msgid "Query and manage firmware on a mobile broadband device"
